# gsMap

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/source/: 10x.md
gsmap_vibe/: pyproject.toml
gsmap_vibe/gsmap_mcp/: docs.py  server.py  tools.py
gsmap_vibe/gsmap_skill/: SKILL.md
src/gsMap/: __init__.py  config.py  diagnosis.py  generate_ldscore.py  report.py  run_all_mode.py  visualize.py
src/gsMap/templates/: report_template.html
src/gsMap/utils/: generate_r2_matrix.py  regression_read.py  torch_utils.py
